--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jobsway-admin",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4001/",
+  "proxy": "https://jobsway-admin.herokuapp.com/api/v1/admin/",
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@testing-library/jest-dom": "^5.14.1",
