--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "https://jobsway-admin.herokuapp.com/api/v1/admin/",
-  "homepage": "https://nihalavulan.github.io/jobsway-admin",
+  "homepage": "http://admin.jobsway.online/",
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@testing-library/jest-dom": "^5.14.1",
